--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "oracle-async-init-queues-state",
   "version": "1.0.0",
   "description": "不用等待 Oracle 連線完成，即可直接送出查詢。這裡使用 Oracle Connection Pool, 可以設定多個資料庫連線。",
-  "main": "database.js",
+  "main": "simpleTest.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
